--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "league/csv": "^9.23"
+        "league/csv": "^9.23",
+        "predis/predis": "2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
